# beadm

./: CLAUDE.md  Cargo.toml  NEWS.md  README.md  build.rs  meson.build  meson_options.txt
.github/workflows/: ci.yml
data/: 90-boot-environments.conf.in  apk-commit-hook.in  beadm-clear-boot-once-dinit.in  beadm-clear-boot-once.service.in  beadm.policy.in  beadm.service.in  dbus-policy.conf.in  dbus-service-systemd.in  dbus-service.in  meson.build
doc/: beadm.8.scd  meson.build
src/: beadm.policy.in  dbus.rs  hooks.rs  main.rs  meson.build
src/be/: kexec.rs  mock.rs  mod.rs  scan.rs  threadsafe.rs  validation.rs  zfs.rs
