[package]
name = "beadm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
tempfile = "3.0"
zbus = { version = "5.0", features = ["blocking-api"] }
zvariant = "5.0"
serde = "1.0"
async-io = "2.0"

[features]
default = ["dbus"]
dbus = []

[dev-dependencies]
