[package]
name = "beadm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
tempfile = "3.0"
zbus = { version = "5.0", features = ["blocking-api"], optional = true }
zvariant = { version = "5.0", optional = true }
serde = { version = "1.0", optional = true }
async-io = { version = "2.0", optional = true }

[features]
default = ["dbus"]
dbus = ["zbus", "zvariant", "serde", "async-io"]

[dev-dependencies]
