[package]
name = "beadm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
tempfile = "3.0"
zbus = { version = "5.0", features = ["blocking-api"], optional = true }
zvariant = { version = "5.0", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
async-io = { version = "2.0", optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }
anyhow = "1.0"

[features]
default = ["dbus", "hooks"]
dbus = ["zbus", "zvariant", "serde", "async-io", "tracing", "tracing-subscriber"]
hooks = ["serde_json", "serde/derive"]

[dev-dependencies]
