# -*- meson-indent-basic: 8 -*-

option('systemd',
       type : 'feature',
       value : 'auto',
       description : 'Enable systemd support')

option('dbus',
       type : 'feature',
       value : 'auto',
       description : 'Enable D-Bus support')

option('apt-hook',
       type : 'feature',
       value : 'auto',
       description : 'Enable APT integration')
